# bmstu_cpp_course

./: tempCodeRunnerFile
tasks/bmstu_list/: CMakeLists.txt
tasks/bmstu_optional/task_optional/: bmstu_optional.h
